--- a/techmeet_final_testfile/calendar.css
+++ b/techmeet_final_testfile/calendar.css
@@ -11,15 +11,12 @@ html, body {
 
 }
 
-/*Navigator*/
-
-
-
 /* Manash edited */
 .calendar__days{
     margin-top: 20px;
-    border-left: 10px solid #5F9EA0;
-    padding-left: 80px;
+    /* border-left: 10px solid #5F9EA0; */
+    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 20px;
 }
 
@@ -34,7 +31,7 @@ html, body {
     margin-top:-40px;
     border-bottom: 3px solid #5F9EA0;
 }
-/*Manash edit ends*/
+/*Manash edit ends */
 
 .calendar-contain, .calendar__days{
     position: relative;
@@ -70,8 +67,11 @@ html, body {
     height: 50px;
     padding-top: 120px;
     padding-right: 100px;
-    /* background-color: yellow; */
 
+}
+
+.form-row{
+    width: max-content;
 }
 
 .title-bar__prev, .title-bar__next {
@@ -132,13 +132,15 @@ aside{
 }
 
 .sidebar__heading{
-    /* background-color: magenta; */
-    margin-left: 30px;
     font-size: 60px;
-    margin-top: 120px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    width: 400px;
     /* color: #5F9EA0; */
 }
-
+.sidebar__list{
+    width: 400px;
+}
 .event-name, .sidebar__list-item--complete{
     font-size: 20px;
     font-weight: bold;
@@ -158,17 +160,10 @@ aside{
     text-decoration: none;
 }
 
-
-/* dropdown and arrow color 
-.title-bar__year .year-dropdown{
-    background-color: #5F9EA0;
+.calendar__sidebar{
+    width: 450px;
+    margin-top: 130px;
 }
-
-.title-bar__month .month-dropdown{
-    background-color: #5F9EA0;
-}*/
-
-
 
 /*entire calendar display*/
 .calendar__days{
@@ -210,4 +205,22 @@ ul{
 
 .today{
     color: #5F9EA0;
+}
+
+.inactive{
+    opacity: 50%;
+}
+
+
+/*form changes*/
+
+.results_return{
+    padding-left: 10px;
+    padding-top: -50px;
+}
+
+.ads{
+    padding-left: 100px;
+    margin-left: 50px;
+    margin-top: 20px;
 }
